Fix misaligned checkbox.

--- a/routeserver/static/bootstrap/css/styles.css
+++ b/routeserver/static/bootstrap/css/styles.css
@@ -23,6 +23,10 @@ body{
     color:#fefefe;
 }
 
+.navbar .checkbox{ 
+    padding-top: .3em;
+}
+
 .navbar-custom .form-control:focus {
     border-color: #49bfff;
     outline: 0;
@@ -51,3 +55,4 @@ body{
     bottom:0;
     overflow:hidden;
 }
+
